# langgraph-salesforce-sap-demo

./: .env.example  .gitignore  ACTUALIZAR_BACKEND.md  COMANDOS_CLOUD_SHELL.md  DEPLOY_CLOUDSHELL.md  DESPLEGAR_AGENTE_COMPLETO.md  GUIA_DESPLIEGUE.md  README.md  deploy_agent.py  env.complete.example  env.gcp.example  langgraph.json  prepare_deployment.py  pyproject.toml  requirements.txt  update_env_vars.py
backend_for_lovable/: .env.example  .gitignore  COMANDOS_CURL.md  DEPLOYMENT_GUIDE.md  Dockerfile  LOVABLE_INSTRUCTIONS.md  LOVABLE_PROMPT_COMPLETO.md  PARA_LOVABLE.md  README.md  REDESPLEGAR_AHORA.md  deploy.sh  main.py  main_v1_backup.py  main_v2.py  requirements.txt  test_backend.sh
demo/: demo_scenarios.json  postman_collection.json  quick_test_cases.json  run_demo.py  streamlit_app.py  test_cases.json
docs/: API_ENDPOINTS.md  ARCHITECTURE_OVERVIEW.md  COMPLETE_ENV_VARIABLES.md  DEPLOYMENT_FIX.md  EMAIL_CONFIGURATION.md  ENVIRONMENT_VARIABLES.md  FRONTEND_PROMPT.md  FRONTEND_PROMPT_UPDATED.md  LANGGRAPH_STUDIO_SETUP.md  RESEND_SETUP.md  TROUBLESHOOTING_VERTEX_AI.md
scripts/: debug_resend.py  list_reasoning_engines.py  quick_update_env.sh  setup_service_account.sh  start_studio.sh  test_email_config.py  test_resend.py  test_resend_api.py  test_resend_direct.py  test_salesforce_auth.py  test_vertex_auth.py  update_agent_env_vars.py  update_env_vars_inline.py  view_traces.py
src/: __init__.py  app.py  config.py  main.py
src/api/: routes.py
src/graphs/: complaint_graph.py  lead_graph.py  ticket_graph.py
src/models/: __init__.py  state.py
src/tools/: __init__.py  email.py  kb.py  llm.py  prompts.py  salesforce.py  sap.py  scoring.py
